--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "null",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write ./src",
+    "format": "prettier --write ./src --ignore-unknown",
     "prepare": "husky install",
-    "husky":"node ./node_modules/husky/lib/bin.js"
+    "husky": "node ./node_modules/husky/lib/bin.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wangLi007/code-tool.git"
   },
   "lint-staged": {
-    "**/*": "prettier --write ./src"
+    "src/**/*.{jsx,tsx,ts,js,json,css,md}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -23,8 +27,17 @@
   },
   "homepage": "https://github.com/wangLi007/code-tool#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "2.7.1"
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3"
   }
 }
